Added meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="The Best Coffee From | Starbuck Coffee Company" />
+    <meta property="og:description" content="Personal project for education purposes only, redesigning starbucks /coffee webpage" />
+    <meta property="og:image" content="./assets/images/Fromthis.png" />
 
     <link rel="shortcut icon" href="./assets/images/favicon.png"/>
     <link rel="stylesheet" href="./assets/css/main.css">
